# prefect-geopandas-serializer

./: README.md  pyproject.toml
tests/: test_serializers.py
