[tool.poetry]
name = "prefect-geopandas-serializer"
version = "0.1.0"
description = "PandasSerializer adapted for GeoPandas"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
prefect = "^0.15.3"
geopandas = "^0.9.0"
pyarrow = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
